--- a/src/app/group/components/group-settings/group-settings.component.html
+++ b/src/app/group/components/group-settings/group-settings.component.html
@@ -6,7 +6,7 @@
   <div class="dialog">
     <div class="dialog_header">
       <div class="header_text">
-        <h4 class="title" translate="COMPONENTS.GROUP_SETTINGS.HEADING"></h4>
+        <div class="title" translate="COMPONENTS.GROUP_SETTINGS.HEADING"></div>
         <div class="dialog_close">
           <a class="btn_dialog_close icon" dialog-close>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
