--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.html
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.html
@@ -23,7 +23,7 @@
         </div>
         <div class="setting_button dropdown button_dropdown" [cosDropdown]
           *ngIf="canUpdate() && (canEditDeadline() || !hasIdeationEndedExpired())">
-          <button class="btn_medium_plain">
+          <button class="btn_medium_close">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M14 6C14 4.9 13.1 4 12 4C10.9 4 10 4.9 10 6C10 7.1 10.9 8 12 8C13.1 8 14 7.1 14 6ZM14 18C14 16.9 13.1 16 12 16C10.9 16 10 16.9 10 18C10 19.1 10.9 20 12 20C13.1 20 14 19.1 14 18ZM12 10C13.1 10 14 10.9 14 12C14 13.1 13.1 14 12 14C10.9 14 10 13.1 10 12C10 10.9 10.9 10 12 10Z"
@@ -72,12 +72,53 @@
         <ng-container *ngIf="ideas$ | async as ideas;">
           <ng-container *ngIf="ideas.length || filtersSet">
             <div class="tabs_wrap">
-              <div class="tabs_row">
+              <div class="tabs_row" *ngIf="tabSelected !== 'folder'">
                 <a class="tab_item" (click)="selectTab('ideas')" [ngClass]="tabSelected=== 'ideas' ? 'active' : ''"
                   translate="COMPONENTS.TOPIC_IDEATION.TAB_IDEAS" [translateParams]="{count: ideation.ideas.count}"></a>
                 <a class="tab_item" (click)="selectTab('folders')" [ngClass]="tabSelected=== 'folders' ? 'active' : ''"
                   translate="COMPONENTS.TOPIC_IDEATION.TAB_FOLDERS"
                   [translateParams]="{count: ideation.folders?.count || 0}"></a>
+              </div>
+              <div class="folder_data_wrap" *ngIf="tabSelected === 'folder'">
+                <button class="btn_medium_close icon" (click)="leaveFolder()">
+                  <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="40" height="40" rx="20" fill="white" />
+                    <path
+                      d="M18.4533 25.6874C18.8529 26.1042 19.5009 26.1042 19.9006 25.6874C20.3003 25.2705 20.3003 24.5947 19.9006 24.1779L16.9184 21L27 21C27.5652 21 28 20.5892 28 19.9997C28 19.4103 27.5652 19.0176 27 19.0176L16.9184 19.0176L19.9006 15.8221C20.3003 15.4053 20.3003 14.7295 19.9006 14.3126C19.5009 13.8958 18.8529 13.8958 18.4533 14.3126L13 20L18.4533 25.6874Z"
+                      fill="#2C3B47" />
+                  </svg>
+                </button>
+                <div class="icon">
+                  <svg width="28" height="24" viewBox="0 0 28 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_698_77087)">
+                      <path
+                        d="M0 4C0 1.79086 1.79086 0 4 0H9.76637C10.9654 0 12.0972 0.553566 12.8333 1.5C13.5694 2.44643 14.7013 3 15.9003 3H24C26.2091 3 28 4.79086 28 7V9.6H0V4Z"
+                        fill="url(#paint0_linear_698_77087)" />
+                      <path
+                        d="M0 8.72656C0 6.51742 1.79086 4.72656 4 4.72656H24C26.2091 4.72656 28 6.51742 28 8.72656V19.9266C28 22.1357 26.2091 23.9266 24 23.9266H4C1.79086 23.9266 0 22.1357 0 19.9266V8.72656Z"
+                        fill="url(#paint1_linear_698_77087)" />
+                    </g>
+                    <defs>
+                      <linearGradient id="paint0_linear_698_77087" x1="14" y1="3" x2="14" y2="6.3"
+                        gradientUnits="userSpaceOnUse">
+                        <stop stop-color="#FFEBA2" />
+                        <stop offset="1" stop-color="#FFDF6F" />
+                      </linearGradient>
+                      <linearGradient id="paint1_linear_698_77087" x1="14" y1="4.72656" x2="14" y2="23.9266"
+                        gradientUnits="userSpaceOnUse">
+                        <stop offset="0.901042" stop-color="#FFEAA1" />
+                        <stop offset="1" stop-color="#FFDF6F" />
+                      </linearGradient>
+                      <clipPath id="clip0_698_77087">
+                        <rect width="28" height="24" rx="4" fill="white" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </div>
+                <div class="folder_name">
+                  <span [innerHTML]="selectedFolder?.name"></span>
+                  <span>({{selectedFolder?.ideas?.count}})</span>
+                </div>
               </div>
               <ng-container
                 *ngIf="(AuthService.loggedIn$ | async) && topic.visibility === TopicService.VISIBILITY.public || (topic.visibility === TopicService.VISIBILITY.private && canUpdate())">
@@ -86,7 +127,7 @@
               </ng-container>
             </div>
           </ng-container>
-          <ng-container *ngIf="tabSelected === 'ideas'">
+          <ng-container *ngIf="tabSelected === 'ideas' || tabSelected === 'folder'">
             <div class="idea_filters_wrap" *ngIf="ideas.length || filtersSet">
               <div class="options_row">
                 <cos-input [placeholder]="'COMPONENTS.TOPIC_IDEATION.IDEA_FILTER_TYPE' | translate"
@@ -363,7 +404,7 @@
                 </div>
               </ng-container>
             </div>
-            <div id="add_folder_btn" class="button_wrap">
+            <div id="add_folder_btn" class="button_wrap" *ngIf="canEdit()">
               <div class="line_separator"></div>
               <button class="btn_medium_submit btn_ideation animate" (click)="createFolder()">
                 <svg _ngcontent-ng-c968857107="" width="25" height="24" viewBox="0 0 25 24" fill="none"
