--- a/src/app/ideation/components/ideabox/ideabox.component.html
+++ b/src/app/ideation/components/ideabox/ideabox.component.html
@@ -1,5 +1,5 @@
 <a class="idea" [ngClass]="{'moderated': idea.report.id}">
-  <div class="moderated_topic" *ngIf="idea.report && idea.report.id">
+  <!--div class="moderated_topic">
     <div class="notification">
       <div>
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -17,6 +17,36 @@
         <a translate="COMPONENTS.IDEABOX.NOTIFICATION_LNK_WHY" (click)="reportReasonDialog()"></a>
         <a translate="COMPONENTS.IDEABOX.NOTIFICATION_LNK_VIEW" (click)="goToView($event)"></a>
       </div>
+    </div>
+  </!--div-->
+  <div class="deleted_idea_wrap" *ngIf="idea.report && idea.report.id || idea.deletedAt">
+    <div class="deleted_idea_content_wrap">
+      <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect width="40" height="40" rx="20" fill="#F39129" />
+        <path
+          d="M19.0645 8C18.4876 8 18.0304 8.48668 18.0664 9.06238L18.9414 23.0624C18.9743 23.5894 19.4114 24 19.9395 24H20.0605C20.5886 24 21.0257 23.5894 21.0586 23.0624L21.9336 9.06238C21.9696 8.48668 21.5124 8 20.9355 8H19.0645Z"
+          fill="white" />
+        <path
+          d="M20 31C21.1046 31 22 30.1046 22 29C22 27.8954 21.1046 27 20 27C18.8954 27 18 27.8954 18 29C18 30.1046 18.8954 31 20 31Z"
+          fill="white" />
+      </svg>
+      <ng-container *ngIf="idea.deletedReasonType && idea.deletedReasonText">
+        <div class="bold"
+          [innerHtml]="'COMPONENTS.IDEABOX.IDEA_FOUND_INAPPRIOPRIATE_BY' | translate:{usersFullName: idea.deletedBy?.name}">
+        </div>
+        <div class="buttons_wrap">
+          <a (click)="reportReasonDialog()" translate="COMPONENTS.IDEABOX.NOTIFICATION_LNK_WHY"></a>
+          <a (click)="goToView($event)" translate="COMPONENTS.IDEABOX.NOTIFICATION_LNK_VIEW"></a>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="idea.deletedBy?.id === idea.author.id && !idea.deletedReasonType && !idea.deletedReasonText">
+        <div class="bold"
+        [innerHtml]="'COMPONENTS.IDEABOX.IDEA_AUTHOR_REMOVED_IDEA' | translate">
+      </div>
+      <div class="buttons_wrap">
+        <a  (click)="goToView($event)" translate="COMPONENTS.IDEABOX.NOTIFICATION_LNK_VIEW"></a>
+      </div>
+      </ng-container>
     </div>
   </div>
   <div class="idea_header">
@@ -69,7 +99,7 @@
               <span *ngIf="idea.favourite" translate="COMPONENTS.IDEABOX.OPTION_UNFAVOURITE"></span>
             </button>
           </ng-container>
-          <ng-container *ngIf="canEdit()">
+          <ng-container *ngIf="canEditTopic()">
             <div class="line_separator"></div>
             <button class="option" (click)="addToFolder()">
               <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -80,7 +110,7 @@
               <span translate="COMPONENTS.IDEABOX.OPTION_ADD_TO_FOLDER"></span>
             </button>
           </ng-container>
-          <ng-container *ngIf="canEdit()">
+          <ng-container *ngIf="canEditIdea()">
             <div class="line_separator"></div>
             <button class="option" (click)="ideaEditMode()">
               <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -123,7 +153,7 @@
               <span translate="COMPONENTS.IDEABOX.OPTION_VIEW_PREVIOUS_VERSIONS"></span>
             </button>
           </ng-container>
-          <ng-container *ngIf="canEdit()">
+          <ng-container *ngIf="canEditIdea()">
             <div class="line_separator"></div>
             <button class="option error_text" (click)="doShowDeleteIdea()">
               <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
