--- a/src/app/shared/components/cos-calender/cos-calender.component.html
+++ b/src/app/shared/components/cos-calender/cos-calender.component.html
@@ -1,4 +1,4 @@
-<div id="cos_calendar">
+<div id="cos_calendar" [ngClass]="class">
   <div class="cos_cal_month_selector">
     <button (click)="setMonth(-1)">
       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
