--- a/src/app/ideation/components/idea/idea-dialog.component.html
+++ b/src/app/ideation/components/idea/idea-dialog.component.html
@@ -188,14 +188,14 @@
             <button class="btn_medium_submit" (click)="showReply = true">Reply</button>
           </div>
           <div class="form_wrap">
-            <idea-reply-form id="reply_form" *ngIf="showReply" [(showReply)]="showReply" [topicId]="topic.id" [ideationId]="ideationId" [ideaId]="idea.id"></idea-reply-form>
+            <idea-reply-form id="reply_form" *ngIf="showReply" [(showReply)]="showReply" [topicId]="topic.id" [ideationId]="ideation.id" [ideaId]="idea.id"></idea-reply-form>
           </div>
           <div class="line_separator"></div>
         </div>
         <div class="replies_content_wrap">
           <div class="replies_wrap">
             <ng-container *ngIf="replies$ | async as replies">
-              <idea-reply [topicId]="topic.id" [ideationId]="ideationId" [ideaId]="idea.id" [argument]="reply" *ngFor="let reply of replies.rows" ></idea-reply>
+              <idea-reply [topicId]="topic.id" [ideationId]="ideation.id" [ideaId]="idea.id" [argument]="reply" *ngFor="let reply of replies.rows" ></idea-reply>
             </ng-container>
           </div>
         </div>
